[package]
name = "ados-mavlink-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Owns the flight-controller serial link, fans MAVLink frames to the IPC socket, and produces the vehicle-state snapshot on the state socket."

[dependencies]
ados-protocol = { path = "../ados-protocol", features = ["mavlink"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }

[dev-dependencies]
tempfile = "3"
