[package]
name = "ados-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin RPC host: serves a per-plugin Unix socket, verifies the capability token at handshake, and gates each request on its required capability before routing to a host service."

[dependencies]
# The wire (frame + envelope + capability token) lives in ados-protocol and is
# byte-parity tested against the Python supervisor. This crate speaks it
# unchanged; it never re-implements the framing or the token.
ados-protocol = { path = "../ados-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Linux-only edge: setting the socket file mode to 0o660 after bind. Confined to
# a target section so the pure-logic core still builds and tests on a non-Linux
# dev host (where the mode set is a no-op).
[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = "3"
