[package]
name = "ados-radio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WFB-ng radio link manager: adapter selection, monitor-mode, TX subprocess with setsid/killpg, FHSS hop supervisor, Rule-37 watchdogs."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
tracing-journald = { workspace = true }

[dev-dependencies]
tempfile = "3"
