[package]
name = "ados-radio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WFB-ng radio link manager: adapter selection, monitor-mode, TX subprocess with setsid/killpg, FHSS hop supervisor, Rule-37 watchdogs."

[[bin]]
name = "ados-radio"
path = "src/main.rs"

[features]
# The cross-platform userspace USB (devourer) radio backend.
# OFF by default — the backend seam ships inert; the userspace implementation
# lands behind this gate in a later wave.
userspace-usb = []

[dependencies]
# The producer-side log-shipping layer (feature-gated in ados-protocol) feeds
# the logging daemon's ingest socket alongside journald; never on the hot path.
ados-protocol = { path = "../ados-protocol", features = ["tracing-layer"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
# blake2b-8 over the peer-public key half → the 16-hex pair fingerprint.
blake2 = { workspace = true }
hex = { workspace = true }
time = { version = "0.3", features = ["std", "formatting"] }
# Object-safe async methods on the RadioBackend trait (the radio-backend seam).
async-trait = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
tracing-journald = { workspace = true }

[dev-dependencies]
tempfile = "3"
