[package]
name = "ados-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal dashboard for the ADOS Drone Agent, launched by `ados` with no subcommand."

[[bin]]
name = "ados-tui"
path = "src/main.rs"

[dependencies]
ados-protocol = { path = "../ados-protocol" }
ratatui = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# Signal disposition around a shelled-out quick action (via nix::libc), so a
# Ctrl-C used to stop a streaming child exits the child, not this cockpit.
nix = { workspace = true }
