[package]
name = "ados-video"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Video pipeline orchestrator: supervises the ffmpeg/mediamtx/wfb_tee subprocesses with setsid/killpg process-group ownership, drives the encoder + local RTSP + RTP-to-WFB tap."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
time = { version = "0.3", features = ["std", "formatting", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
tracing-journald = { workspace = true }

[dev-dependencies]
tempfile = "3"
