[package]
name = "ados-video"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Video pipeline orchestrator: supervises the ffmpeg/mediamtx/wfb_tee subprocesses with setsid/killpg process-group ownership, drives the encoder + local RTSP + RTP-to-WFB tap."

[lib]
name = "ados_video"
path = "src/lib.rs"

[[bin]]
name = "ados-video"
path = "src/main.rs"

[dependencies]
ados-protocol = { path = "../ados-protocol", features = ["tracing-layer"] }
ados-hal-probe = { path = "../ados-hal-probe" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
time = { version = "0.3", features = ["std", "formatting", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
tracing-journald = { workspace = true }

[dev-dependencies]
tempfile = "3"
